--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Domonick Lewis' Portfolio</title>
-    <div class="logo"><a href="HomePage.html"><img src="/Assets/Logo.png" alt="Logo" width="70" height="70"></a> </div>
+    <div class="logo"><a href="HomePage.html"><img src="./assets/Logo.png" alt="Logo" width="70" height="70"></a> </div>
     <nav class="navbar">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -36,3 +36,4 @@
   </footer>
 
 </html>
+
