--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Domonick Lewis' Portfolio</title>
-    <div class="logo"><a href="HomePage.html"><img src="./assets/Logo.png" alt="Logo" width="70" height="70"></a> </div>
+    <div class="logo"><a href="HomePage.html"><img src="/assets/Logo.png" alt="Logo" width="70" height="70"></a> </div>
     <nav class="navbar">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -16,7 +16,7 @@
   </head>
   <body class="main">
     <main>
-        <div id="profile-pic"><img src="./Assets/Profile Picture.png" alt="Profile Picture" width="200" height="200"></div>
+        <div id="profile-pic"><img src="/assets/Profile Picture.png" alt="Profile Picture" width="200" height="200"></div>
       <div id="about-me">
         <h2>About Me</h2>
         <p>Name: Domonick Lewis</p>
@@ -36,6 +36,7 @@
   </footer>
 
 </html>
+
 
 
 
