--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body class="main">
     <main>
-        <div id="profile-pic"><img src="/assets/Profile Picture.png" alt="Profile Picture" width="200" height="200"></div>
+        <div id="profile-pic"><img src="assets/Profile Picture.png" alt="Profile Picture" width="200" height="200"></div>
       <div id="about-me">
         <h2>About Me</h2>
         <p>Name: Domonick Lewis</p>
@@ -36,6 +36,7 @@
   </footer>
 
 </html>
+
 
 
 
